--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ img {
     max-width: 522px;
     margin: auto;
 }
-input[type="submit"] {
+[type="submit"] {
     transition: all 350ms ease-in;
     border: 1px solid var(--main-color)!important;
 }
-input[type="submit"]:hover {
+[type="submit"]:hover {
     background: transparent!important;
     border: 1px solid var(--main-color)!important;
     box-shadow: 0 4px 10px rgba(36,36,36,.12);
@@ -107,7 +107,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 15px 0;
+    padding: 15px 0;
+    position: fixed;
+    width: 100%;
+    background: #fff;
 }
 .header-item__phone div,
 .header-item__features ul:not(.lang, .mobile-list) li {
@@ -225,13 +228,13 @@ header {
 .fixed_stick {
     position: fixed;
     width: 100%;
-    top: -15px;
+    top: 0;
     padding: 15px 0;
     z-index: 11;
     background: hsla(0, 0%, 100%, 0.85);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
-    animation: upper_down 0.9s;
+    /* animation: upper_down 0.9s; */
     box-shadow: 0px 10px 50px rgb(0 66 131 / 10%);
 }
 @keyframes upper_down {
@@ -333,9 +336,12 @@ header {
     width: 100%;
     outline: 0;
 }
-#offer .offer-bottom input[type="submit"] {
+#offer .offer-bottom [type="submit"] {
     background: var(--main-color);
-    font-family: Open Sans;
+    font-family: 'Open Sans';
+    width: 100%;
+    padding: 13px 33px;
+    border-radius: 60px;
     font-size: 16px;
     font-weight: 700;
     line-height: 22px;
@@ -378,17 +384,18 @@ header {
 }
 #services .services-item__service {
     position: relative;
-    padding: 160px 150px 45px 30px;
+    /* padding: 160px 150px 45px 30px; */
     font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
     text-transform: uppercase;
     color: #fff;
-
 }
 #services .services-item__service::before {
     content: '';
@@ -399,59 +406,78 @@ header {
     height: 100%;
     background: rgba(0, 24, 53, 0.7);
 }
+#services .services-item__service img {
+    width: 100%;
+}
 #services .services-item__service p::after {
     content: '';
     display: block;
     position: absolute;
-    left: 30px;
+    /* left: 30px; */
     background: #F5BE28;
     margin-top: 15px;
     width: 20px;
     height: 4px;
     z-index: 1;
 }
-#services .services-item__service p {
+#services .services-item__service .service-text {
+    position: absolute;
     z-index: 1;
+    /* height: 64px; */
+    padding: 160px 150px 45px 30px;
+    transition: all 350ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
-.services-more {
+#services .services-item__service:hover .service-text {
+    transform: translateY(-70px);
+}
+#services .services-more {
+    position: absolute;
+    left: 30px;
+    bottom: -35px;
     margin-top: 62px;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 500ms ease-in-out;
+    transition: opacity 500ms cubic-bezier(0.55, 0.085, 0.68, 0.53);
+    z-index: 1;
+    transition: all 500ms ease-in-out
 }
-#services .services-item__service.service-1:hover .services-more {
+#services .services-item__service:hover .services-more {
     opacity: 1;
     visibility: visible;
+    color: var(--white-color);
+    transform: translateY(-70px);
 }
 .services-big__one {
     flex-direction: column;
     z-index: 1;
 }
 #services .services .services-item__service {
-    background-size: cover;
+    /* background-size: cover; */
+    margin-bottom: 30px;
 }
 .services .service-1 {
-    background: url('img/services/Rectangle1805.png') no-repeat;
-    height: 570px;
+    /* background: url('img/services/Rectangle1805.png') no-repeat;
+    height: 570px; */
 }
 .services .service-2 {
-    background: url('img/services/Rectangle1804.png') no-repeat;
-    height: 270px;
+
+    /* background: url('img/services/Rectangle1804.png') no-repeat; */
+    /* height: 270px; */
     margin-bottom: 30px;
 }
 .services .service-3 {
-    background: url('img/services/Rectangle1806.png') no-repeat;
-    height: 270px;
+    /* background: url('img/services/Rectangle1806.png') no-repeat; */
+    /* height: 270px; */
     margin-bottom: 30px;
 }
 .services .service-4 {
-    background: url('img/services/Rectangle1807.png') no-repeat;
-    height: 270px;
+    /* background: url('img/services/Rectangle1807.png') no-repeat; */
+    /* height: 270px; */
     margin-bottom: 30px;
 }
 .services .service-5 {
-    background: url('img/services/Rectangle1808.png') no-repeat;
-    height: 270px;
+    /* background: url('img/services/Rectangle1808.png') no-repeat; */
+    /* height: 270px; */
     margin-bottom: 30px;
 }
 #cta {
@@ -486,23 +512,27 @@ header {
     padding: 12px 0 11px 15px;
     margin-bottom: 10px;
 }
-#cta .cta-item__form input[type="submit"] {
+#cta .cta-item__form [type="submit"] {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 22px;
+    padding: 13px 33px;
+    border-radius: 60px;
     margin: 0;
+    width: 100%;
     margin-right: 24px;
     padding: 13px 32px 12px 33px;
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
     border: none;
     color: var(--black-strond);
     background: var(--main-color);
 }
-#cta .cta-item__form input[type="submit"] + p {
+#cta .cta-item__form [type="submit"] + p {
     width: 100%;
     margin: 0;
     font-family: 'Open Sans';
@@ -513,7 +543,7 @@ header {
     text-transform: uppercase;
     color: var(--black-strong);
 }
-#cta .cta-item__form input[type="submit"] + p a {
+#cta .cta-item__form [type="submit"] + p a {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
@@ -549,7 +579,7 @@ header {
     position: relative;
 } */
 #about .about-item__img::after,
-#testimonials .testimonials-item__slider::after {
+/* #testimonials .testimonials-item__slider::after {
     content: url(img/dash.png);
     display: block;
     position: absolute;
@@ -557,7 +587,7 @@ header {
     top: 50%;
     transform: translateY(-50%);
     z-index: -1;
-}
+} */
 #about .about-item__text h3 {
     text-align: left;
 }
@@ -577,16 +607,16 @@ header {
 #testimonials .testimonials-item__slider img:first-of-type {
     z-index: 1;
 }
-#testimonials .testimonials-item__slider img:last-of-type {
+/* #testimonials .testimonials-item__slider img:last-of-type {
     position: absolute;
     right: 15px;
     top: 50%;
     transform: translateY(-50%);
-}
-#testimonials .testimonials-item__slider::after {
+} */
+/* #testimonials .testimonials-item__slider::after {
     content: url(img/dash-2.png);
     right: -15px;
-}
+} */
 #partners {
     margin-top: 95px;
 }
@@ -680,11 +710,6 @@ footer .footer-bottom .footer-item__copyright p:first-child {
         display: none;
     }
 }
-@media (min-width: 780px) and (max-width: 1199px) {
-    #advantage .advantage-item p {
-        height: 96px;
-    }
-}
 @media (max-width: 1199px) {
     .container {
         padding: 0 40px
@@ -712,9 +737,10 @@ footer .footer-bottom .footer-item__copyright p:first-child {
     #offer .offer-bottom input, #offer .offer-bottom select {
         margin-bottom: 20px;
     }
-    .services .service-1 {
-        height: 270px;
-        margin-bottom: 30px;
+    #services .services .service-1 img {
+        height: 370px;
+        object-fit: cover;
+        /* margin-bottom: 30px; */
     }
     #cta {
         margin-top: 20px;
@@ -744,6 +770,14 @@ footer .footer-bottom .footer-item__copyright p:first-child {
     .header-item.header-item__phone a {
         font-size: 16px;
     }
+    #services .services-item__service .service-text {
+        padding-right: 15px;
+    }
+}
+@media (min-width: 750px) and (max-width: 1199px) {
+    #advantage .advantage-item p {
+        height: 96px;
+    }
 }
 @media (max-width: 782px) {
     #offer [class^="col-"] {
@@ -757,14 +791,16 @@ footer .footer-bottom .footer-item__copyright p:first-child {
     #cta .cta-item__form .input-flex input {
         width: 100%!important;
     }
-    #cta .cta-item__form input[type="submit"] + p {
+    #cta .cta-item__form [type="submit"] + p {
         text-align: center;
         margin-top: 20px;
     }
     .header-item.header-item__phone a {
         font-size: 12px;
     }
-    header .header-item.header-item__features .socials {
+    header .header-item.header-item__features .socials,
+    footer .footer-item__services,
+    footer .footer-item__about {
         display: none!important;
     }
     section {
@@ -773,6 +809,11 @@ footer .footer-bottom .footer-item__copyright p:first-child {
     .wrapper .mobile-menu {
         padding-top: 100px;
     }
+}
+@media (max-width: 632px) {
+    header .header-item.header-item__phone a {
+        font-size: 11px;
+    }  
 }
 @media (max-width: 575px) {
     header .header-item {
@@ -796,14 +837,20 @@ footer .footer-bottom .footer-item__copyright p:first-child {
     #testimonials .testimonials-item__text {
         width: 100%;
     }
-    #testimonials .swiper-button-prev, .swiper-rtl .swiper-button-next,
+    /* #testimonials .swiper-button-prev, .swiper-rtl .swiper-button-next,
     #testimonials .swiper-button-next, .swiper-rtl .swiper-button-next {
         display: none;
-    }
+    } */
     #offer .offer-box {
         padding: 20px;
     }
-    .header-item.header-item__phone a {
-        font-size: 16px;
+    header .header-item.header-item__phone {
+        display: none!important;
+    }
+}
+@media (max-width: 445px) {
+    #testimonials .swiper-button-prev, .swiper-rtl .swiper-button-next,
+    #testimonials .swiper-button-next, .swiper-rtl .swiper-button-next {
+        top: 140px;
     }
 }
